# d2b-kickoff

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini  unit_test.py
app/: app.py  bq_psql.py
data/: json_csv.csv  user.json
data_c/: main.py
tests/: test_data_c.py  test_helloworld.py  test_load_bq_psql.py
