[tool.poetry]
name = "data-c"
version = "0.1.0"
description = ""
authors = ["harksodje <harksodje@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.19.0"
regex = "^2022.4.24"
pandas = "^1.4.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
